{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 374,
  "lineage": "5805c19d-dc55-84de-5fb0-fbfe440405e5",
  "resources": [
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230206",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/zones/us-central1-a/disks/vinstance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/abdelrahman-ahmed-iti-project/zones/us-central1-a/instances/vinstance",
            "instance_id": "3218280794058261464",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "97nlinW6Lgk=",
            "name": "vinstance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/networks/gcp-network",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/regions/us-central1/subnetworks/management-subnet",
                "subnetwork_project": "abdelrahman-ahmed-iti-project"
              }
            ],
            "project": "abdelrahman-ahmed-iti-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/zones/us-central1-a/instances/vinstance",
            "service_account": [
              {
                "email": "395144833704-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.VPC.google_compute_network.vpc_network",
            "module.VPC.google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "FW",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-02-08T06:35:59.015-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abdelrahman-ahmed-iti-project/global/firewalls/test-firewall",
            "log_config": [],
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/networks/gcp-network",
            "priority": 1000,
            "project": "abdelrahman-ahmed-iti-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/firewalls/test-firewall",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.google_compute_network.vpc_network",
            "module.VPC.google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "FWSSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-02-08T06:35:59.001-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abdelrahman-ahmed-iti-project/global/firewalls/test-firewallssh",
            "log_config": [],
            "name": "test-firewallssh",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/networks/gcp-network",
            "priority": 1000,
            "project": "abdelrahman-ahmed-iti-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/firewalls/test-firewallssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/abdelrahman-ahmed-iti-project/global/networks/gcp-network",
            "mtu": 1460,
            "name": "gcp-network",
            "project": "abdelrahman-ahmed-iti-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/networks/gcp-network"
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-02-08T06:35:58.888-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/abdelrahman-ahmed-iti-project/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/networks/gcp-network",
            "project": "abdelrahman-ahmed-iti-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "module.VPC.google_compute_network.vpc_network",
            "module.VPC.google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "abdelrahman-ahmed-iti-project/us-central1/my-router/my-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "abdelrahman-ahmed-iti-project",
            "region": "us-central1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/regions/us-central1/subnetworks/management-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.VPC.google_compute_network.vpc_network",
            "module.VPC.google_compute_router.router",
            "module.VPC.google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-08T06:35:46.327-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/abdelrahman-ahmed-iti-project/regions/us-central1/subnetworks/management-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/networks/gcp-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "abdelrahman-ahmed-iti-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/regions/us-central1/subnetworks/management-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.VPC.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-08T06:35:46.204-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/abdelrahman-ahmed-iti-project/regions/us-central1/subnetworks/restricted-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/global/networks/gcp-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "abdelrahman-ahmed-iti-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.144.0.0/14",
                "range_name": "gke-my-gke-cluster-pods-f3decea7"
              },
              {
                "ip_cidr_range": "10.148.0.0/20",
                "range_name": "gke-my-gke-cluster-services-f3decea7"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/abdelrahman-ahmed-iti-project/regions/us-central1/subnetworks/restricted-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.VPC.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}